--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,32 @@ h1 {
     font-size: 24px;
     color: #333;
 }
+
+.log {
+    font-size: 16px;
+    color: gray;
+}
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Two equal-width columns */
+    padding: 10px;
+    justify-content: center;
+    align-content: center;
+}
+.grid-item {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+#waveformCanvas {
+    display: block;
+}
+
